--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>AngularJS • TodoMVC</title>
   <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
   <link rel="stylesheet" href="oceanfront/stylesheets/oceanfront/oceanfront.css">
-  <script data-turbolinks-track="false" src="js/tools/jquery-1.10.1.js?body=1"></script>
-  <script data-turbolinks-track="false" src="js/tools/jquery.base64.js?body=1"></script>
-  <script data-turbolinks-track="false" src="js/tools/jquery.cookie.js?body=1"></script>
-  <script data-turbolinks-track="false" src="oceanfront/javascripts/oceanfront/oceanfront.js"></script>
-  <script data-turbolinks-track="false" src="js/app.js"></script>
+  <script src="js/tools/jquery-1.10.1.js?body=1"></script>
+  <script src="js/tools/jquery.base64.js?body=1"></script>
+  <script src="js/tools/jquery.cookie.js?body=1"></script>
+  <script src="oceanfront/javascripts/oceanfront/oceanfront.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
   <div id="bootstrap"></div>
