--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AngularJS • TodoMVC</title>
+  <title>Oceanframework • TodoMVC</title>
   <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
   <link rel="stylesheet" href="oceanfront/stylesheets/oceanfront/oceanfront.css">
   <script src="js/tools/jquery-1.10.1.js?body=1"></script>
