--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Oceanframework • TodoMVC</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="oceanfront/stylesheets/oceanfront/oceanfront.css">
   <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
   <script src="js/tools/jquery-1.10.1.js?body=1"></script>
