Minor template changes.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <title>Oceanframework • TodoMVC</title>
   <meta charset="utf-8">
