--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <script src="js/tools/jquery.base64.js?body=1"></script>
   <script src="js/tools/jquery.cookie.js?body=1"></script>
   <script src="oceanfront/javascripts/oceanfront/oceanfront.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/model.js"></script>
+  <script src="js/controller.js"></script>
+  <script src="js/widgets.js"></script>
+  <script src="js/view.js"></script>
 </head>
 <body>
   <div id="boostrap"></div>
