--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
   <script src="js/tools/jquery-1.10.1.js?body=1"></script>
-  <script src="oceanfront/javascripts/oceanfront/oceanfront.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/model.js"></script>
-  <script src="js/controller.js"></script>
-  <script src="js/widgets.js"></script>
-  <script src="js/view.js"></script>
+  <script src="oceanfront/javascripts/oceanfront/oceanfront.js" type="text/javascript"></script>
+  <script src="js/utils.js" type="text/javascript"></script>
+  <script src="js/model.js" type="text/javascript"></script>
+  <script src="js/controller.js" type="text/javascript"></script>
+  <script src="js/widgets.js" type="text/javascript"></script>
+  <script src="js/view.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="boostrap"></div>
