--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
-  <script src="js/tools/jquery-1.10.1.js?body=1"></script>
+  <script src="js/tools/jquery-1.10.1.js?body=1" type="text/javascript"></script>
   <script src="oceanfront/javascripts/oceanfront/oceanfront.js" type="text/javascript"></script>
   <script src="js/utils.js" type="text/javascript"></script>
   <script src="js/model.js" type="text/javascript"></script>
